--- a/man/kwekash.1
+++ b/man/kwekash.1
@@ -3,18 +3,25 @@
 kwekash \- run weka commands inside a WEKA drive pod
 
 .SH SYNOPSIS
-kwekash [weka_subcommand]
+kwekash [-it] [weka_subcommand]
 
 .SH DESCRIPTION
 This tool allows you to run weka CLI commands inside the first available WEKA drive pod
-found in your Kubernetes cluster.
+in your Kubernetes cluster.
 
-If no arguments are passed, it opens an interactive shell.
+.SH OPTIONS
+.TP
+-it
+Open an interactive shell in the drive pod.
 
 .SH EXAMPLES
 .TP
 kwekash
-Start an interactive shell on the drive pod.
+Run "weka status" on the pod.
+
+.TP
+kwekash -it
+Start an interactive shell on the pod.
 
 .TP
 kwekash status
@@ -23,8 +30,4 @@ Run "weka status" on the pod.
 .TP
 kwekash local ps
 Run "weka local ps" on the pod.
-
-.TP
-kwekash --help
-Show usage information.
 
