--- a/man/kwekash.1
+++ b/man/kwekash.1
@@ -1,4 +1,4 @@
-.TH kwekash 1 "April 2025" "kwekash 1.2" "User Commands"
+.TH kwekash 1 "April 2025" "kwekash 1.3" "User Commands"
 .SH NAME
 kwekash \- run weka commands inside a WEKA drive pod
 
@@ -9,16 +9,16 @@ kwekash [--kubeconfig <path>] [-it] [watch [watch-options]] [weka-subcommand ...
 kwekash is a helper script to run weka CLI commands inside the first available
 WEKA drive pod in your Kubernetes cluster.
 
-By default, it runs "weka status". You can also:
-- Pass any weka command (e.g., "local ps")
-- Run interactively with -it
-- Prefix with "watch" to refresh output in real-time
+It simplifies debugging and monitoring common WEKA commands and supports interactive shell access,
+periodic status updates via watch, and targeting specific kubeconfig contexts.
 
 .SH OPTIONS
 .TP
 --kubeconfig <path>
-Specify the kubeconfig file to use. If not provided, kwekash will use the
-KUBECONFIG environment variable. If neither is set, kwekash exits with an error.
+Specify the kubeconfig file to use when interacting with the Kubernetes cluster.
+If not specified, kwekash will attempt to use the KUBECONFIG environment variable.
+
+Note: This option is only used for selecting the target cluster. It is not passed to the `weka` command.
 
 .TP
 -it
@@ -56,4 +56,7 @@ Start an interactive shell on the pod.
 
 .TP
 kwekash --kubeconfig ~/.kube/staging
-Use a specific kubeconfig file to connect
+Use a specific kubeconfig file to connect to a different cluster.
+
+.SH AUTHOR
+Rodney Peck
